--- a/api_cafe/templates/index.html
+++ b/api_cafe/templates/index.html
@@ -271,7 +271,15 @@
                             <button class="delete-btn">Eliminar</button>
                         </div>
                     </div>
-                    
+                    <div class="producto">
+                        <img src="https://palmicafe2.blob.core.windows.net/$web/static/imagenes/cafelatte.jpg" alt="Café Latte">
+                        <div class="producto-info">
+                            <h3>Café Loco</h3>
+                            <p>Descripción: Delicioso café con leche, perfecto para cualquier momento del día.</p>
+                            <p>Precio: $3.49</p>
+                            <button class="delete-btn">Eliminar</button>
+                        </div>
+                    </div>
                     <!-- Puedes agregar más productos aquí -->
                 </div>
                 
